--- a/post.ipynb
+++ b/post.ipynb
@@ -35,6 +35,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shortNameDict = {\n",
+    "    \"data1800PlusPhysicsLambda1\": \"D+P\",\n",
+    "    # \"data1800PlusPhysicsLambda1\": \"D+P_L1\",\n",
+    "    \"data1800PlusPhysicsLambda01\": \"D+P\",\n",
+    "    # \"data1800PlusPhysicsLambda01\": \"D+P_L0.1\",\n",
+    "    \"dataOnly1800\": \"D\",\n",
+    "    \"physicsOnly\": \"P\",\n",
+    "    \"pressureDataPlusPhysicsLambda1\": \"PD+P\",\n",
+    "    \"2pO\": \"toP\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -418,71 +436,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data1800PlusPhysicsLambda01@100k2pO@500k & 100 & 0.3167 & 0.1310 & 20.2063 & -  \\\\\n",
-      "  & 200 & 0.2773 & 0.2832 & 14.6947 & -  \\\\\n",
-      "  & 300 & 0.2767 & 0.3571 & 12.5081 & -  \\\\\n",
-      "  & 400 & 0.2755 & 0.3566 & 11.2286 & -  \\\\\n",
-      "  & 500 & 0.2741 & 0.3635 & 10.4317 & -  \\\\\n",
-      "  & 600 & 0.3404 & 0.3532 & 9.9033 & -  \\\\\n",
-      "  & 700 & 0.2742 & 0.3635 & 9.5018 & -  \\\\\n",
-      "  & 800 & 0.2730 & 0.3967 & 9.2026 & -  \\\\\n",
-      "  & 900 & 0.5790 & 0.3583 & 8.9778 & -  \\\\\n",
-      "  & 1000 & 0.5765 & 0.3534 & 8.9200 & -  \\\\\n",
+      "D+P@100k_toP@500k & 100 & 0.2239 & 0.1210 & 20.1959 & -  \\\\\n",
+      "  & 200 & 0.2772 & 0.2832 & 14.6958 & -  \\\\\n",
+      "  & 300 & 0.2200 & 0.3515 & 12.4621 & -  \\\\\n",
+      "  & 400 & 0.2180 & 0.3534 & 11.1902 & -  \\\\\n",
+      "  & 500 & 0.2187 & 0.3609 & 10.4098 & -  \\\\\n",
+      "  & 600 & 0.2174 & 0.3596 & 9.8865 & -  \\\\\n",
+      "  & 700 & 0.2146 & 0.3628 & 9.4816 & -  \\\\\n",
+      "  & 800 & 0.2110 & 0.3967 & 9.1844 & -  \\\\\n",
+      "  & 900 & 0.2136 & 0.3951 & 8.9682 & -  \\\\\n",
+      "  & 1000 & 0.2117 & 0.4021 & 8.9151 & -  \\\\\n",
       "\\hline\n",
-      "data1800PlusPhysicsLambda01@300k2pO@500k & 100 & 0.3087 & 0.3008 & 19.9466 & -  \\\\\n",
-      "  & 200 & 0.3928 & 0.2615 & 14.5874 & -  \\\\\n",
-      "  & 300 & 0.2804 & 0.3903 & 12.3786 & -  \\\\\n",
-      "  & 400 & 0.2796 & 0.3952 & 11.1640 & -  \\\\\n",
-      "  & 500 & 0.2817 & 0.3935 & 10.3908 & -  \\\\\n",
-      "  & 600 & 0.2816 & 0.3970 & 9.8511 & -  \\\\\n",
-      "  & 700 & 0.2884 & 0.3942 & 9.4600 & -  \\\\\n",
-      "  & 800 & 0.2948 & 0.3970 & 9.0953 & -  \\\\\n",
-      "  & 900 & 0.7676 & 0.3120 & 8.9488 & -  \\\\\n",
-      "  & 1000 & 0.5765 & 0.3303 & 8.8544 & -  \\\\\n",
+      "D+P@300k_toP@500k & 100 & 0.3092 & 0.3010 & 19.9493 & -  \\\\\n",
+      "  & 200 & 0.3930 & 0.2622 & 14.5867 & -  \\\\\n",
+      "  & 300 & 0.2180 & 0.3891 & 12.3648 & -  \\\\\n",
+      "  & 400 & 0.2170 & 0.3918 & 11.1349 & -  \\\\\n",
+      "  & 500 & 0.2191 & 0.3895 & 10.3551 & -  \\\\\n",
+      "  & 600 & 0.2155 & 0.3934 & 9.8225 & -  \\\\\n",
+      "  & 700 & 0.2172 & 0.3891 & 9.4348 & -  \\\\\n",
+      "  & 800 & 0.2184 & 0.3964 & 9.0859 & -  \\\\\n",
+      "  & 900 & 0.2195 & 0.3844 & 8.9382 & -  \\\\\n",
+      "  & 1000 & 0.5771 & 0.3308 & 8.8544 & -  \\\\\n",
       "\\hline\n",
-      "data1800PlusPhysicsLambda01@500k & 100 & 0.5537 & 0.1296 & 19.8874 & -  \\\\\n",
-      "  & 200 & 0.3899 & 0.2543 & 14.4710 & -  \\\\\n",
-      "  & 300 & 0.2818 & 0.3925 & 12.3528 & -  \\\\\n",
-      "  & 400 & 0.6424 & 0.3203 & 11.1523 & -  \\\\\n",
-      "  & 500 & 0.7783 & 0.3203 & 10.4418 & -  \\\\\n",
-      "  & 600 & 0.2830 & 0.4001 & 9.9001 & -  \\\\\n",
-      "  & 700 & 0.6456 & 0.3112 & 9.5479 & -  \\\\\n",
-      "  & 800 & 0.3017 & 0.4010 & 9.1438 & -  \\\\\n",
-      "  & 900 & 0.9094 & 0.3028 & 8.9585 & -  \\\\\n",
-      "  & 1000 & 0.8319 & 0.3243 & 8.8750 & -  \\\\\n",
+      "D+P & 100 & 0.5535 & 0.1292 & 19.8896 & -  \\\\\n",
+      "  & 200 & 0.3898 & 0.2544 & 14.4714 & -  \\\\\n",
+      "  & 300 & 0.2824 & 0.3925 & 12.3547 & -  \\\\\n",
+      "  & 400 & 0.6427 & 0.3202 & 11.1529 & -  \\\\\n",
+      "  & 500 & 0.7783 & 0.3204 & 10.4429 & -  \\\\\n",
+      "  & 600 & 0.2145 & 0.3998 & 9.8673 & -  \\\\\n",
+      "  & 700 & 0.2162 & 0.3937 & 9.5285 & -  \\\\\n",
+      "  & 800 & 0.2180 & 0.3981 & 9.1361 & -  \\\\\n",
+      "  & 900 & 0.9092 & 0.3023 & 8.9590 & -  \\\\\n",
+      "  & 1000 & 0.8323 & 0.3244 & 8.8755 & -  \\\\\n",
       "\\hline\n",
-      "data1800PlusPhysicsLambda1@100k2pO@500k & 100 & 0.2501 & 0.1252 & 19.9779 & -  \\\\\n",
-      "  & 200 & 0.2788 & 0.1145 & 14.7347 & -  \\\\\n",
-      "  & 300 & 0.2788 & 0.3338 & 12.4797 & -  \\\\\n",
-      "  & 400 & 0.2757 & 0.3366 & 11.2202 & -  \\\\\n",
-      "  & 500 & 0.2779 & 0.3560 & 10.4176 & -  \\\\\n",
-      "  & 600 & 0.2766 & 0.3561 & 9.8773 & -  \\\\\n",
-      "  & 700 & 0.2788 & 0.3559 & 9.5154 & -  \\\\\n",
-      "  & 800 & 0.5117 & 0.3471 & 9.1768 & -  \\\\\n",
-      "  & 900 & 0.5107 & 0.3481 & 9.0039 & -  \\\\\n",
-      "  & 1000 & 0.5117 & 0.3455 & 9.0072 & -  \\\\\n",
+      "D+P@100k_toP@500k & 100 & 0.2372 & 0.1271 & 19.9760 & -  \\\\\n",
+      "  & 200 & 0.2223 & 0.3356 & 14.7223 & -  \\\\\n",
+      "  & 300 & 0.2191 & 0.3460 & 12.4415 & -  \\\\\n",
+      "  & 400 & 0.2170 & 0.3451 & 11.1630 & -  \\\\\n",
+      "  & 500 & 0.2173 & 0.3547 & 10.3830 & -  \\\\\n",
+      "  & 600 & 0.2161 & 0.3562 & 9.8424 & -  \\\\\n",
+      "  & 700 & 0.2167 & 0.3566 & 9.4899 & -  \\\\\n",
+      "  & 800 & 0.2164 & 0.3992 & 9.1459 & -  \\\\\n",
+      "  & 900 & 0.2175 & 0.3980 & 8.9899 & -  \\\\\n",
+      "  & 1000 & 0.2165 & 0.3980 & 8.9837 & -  \\\\\n",
       "\\hline\n",
-      "data1800PlusPhysicsLambda1@300k2pO@500k & 100 & 0.2965 & 0.1317 & 19.2590 & -  \\\\\n",
-      "  & 200 & 0.3780 & 0.4961 & 14.2931 & -  \\\\\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './optimizationResultsReducedRange/data1800PlusPhysicsLambda1@300k2pO@500k/optResultsF300.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m optPath \u001b[38;5;241m=\u001b[39m optResultsPath \u001b[38;5;241m+\u001b[39m model\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m reNr \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m1100\u001b[39m, \u001b[38;5;241m100\u001b[39m):\n\u001b[0;32m---> 33\u001b[0m     F \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43moptPath\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/optResultsF\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mreNr\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     34\u001b[0m     X \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(optPath \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/optResultsX\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(reNr) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     35\u001b[0m     popF \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(optPath \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/popF\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(reNr) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './optimizationResultsReducedRange/data1800PlusPhysicsLambda1@300k2pO@500k/optResultsF300.npy'"
+      "D+P@300k_toP@500k & 100 & 0.2959 & 0.1316 & 19.2595 & -  \\\\\n",
+      "  & 200 & 0.3778 & 0.4963 & 14.2925 & -  \\\\\n",
+      "  & 300 & 0.2213 & 0.4454 & 12.1583 & -  \\\\\n",
+      "  & 400 & 0.2200 & 0.4302 & 10.9849 & -  \\\\\n",
+      "  & 500 & 0.2179 & 0.4121 & 10.2719 & -  \\\\\n",
+      "  & 600 & 0.2171 & 0.4060 & 9.7592 & -  \\\\\n",
+      "  & 700 & 0.2184 & 0.4067 & 9.4968 & -  \\\\\n",
+      "  & 800 & 0.2175 & 0.4015 & 9.0892 & -  \\\\\n",
+      "  & 900 & 0.2177 & 0.4011 & 9.0157 & -  \\\\\n",
+      "  & 1000 & 0.2184 & 0.4017 & 9.0354 & -  \\\\\n",
+      "\\hline\n",
+      "D+P & 100 & 0.3742 & 0.1311 & 19.8626 & -  \\\\\n",
+      "  & 200 & 0.3780 & 0.4980 & 13.9113 & -  \\\\\n",
+      "  & 300 & 0.4630 & 0.4433 & 11.8453 & -  \\\\\n",
+      "  & 400 & 1.0000 & 0.2465 & 10.8859 & -  \\\\\n",
+      "  & 500 & 0.4603 & 0.3820 & 10.2538 & -  \\\\\n",
+      "  & 600 & 0.6451 & 0.3875 & 9.7169 & -  \\\\\n",
+      "  & 700 & 0.5939 & 0.3908 & 9.5742 & -  \\\\\n",
+      "  & 800 & 0.6456 & 0.3878 & 9.0148 & -  \\\\\n",
+      "  & 900 & 0.6533 & 0.3871 & 8.8977 & -  \\\\\n",
+      "  & 1000 & 0.6406 & 0.3152 & 8.9009 & -  \\\\\n",
+      "\\hline\n",
+      "D & 100 & 0.9718 & 0.3478 & 21.2171 & -  \\\\\n",
+      "  & 200 & 0.3678 & 0.1306 & 13.0838 & -  \\\\\n",
+      "  & 300 & 0.6016 & 0.4332 & 10.5215 & -  \\\\\n",
+      "  & 400 & 0.5997 & 0.4325 & 10.1811 & -  \\\\\n",
+      "  & 500 & 0.5930 & 0.4322 & 9.7543 & -  \\\\\n",
+      "  & 600 & 0.8464 & 0.3068 & 9.3766 & -  \\\\\n",
+      "  & 700 & 0.8466 & 0.3046 & 9.3548 & -  \\\\\n",
+      "  & 800 & 0.8490 & 0.3103 & 8.5803 & -  \\\\\n",
+      "  & 900 & 0.5941 & 0.3102 & 8.7262 & -  \\\\\n",
+      "  & 1000 & 0.8479 & 0.3090 & 8.7245 & -  \\\\\n",
+      "\\hline\n",
+      "P & 100 & 0.2116 & 0.1000 & 20.1844 & -  \\\\\n",
+      "  & 200 & 0.2000 & 0.1000 & 14.6800 & -  \\\\\n",
+      "  & 300 & 0.2000 & 0.1000 & 12.4607 & -  \\\\\n",
+      "  & 400 & 0.2000 & 0.3361 & 11.2295 & -  \\\\\n",
+      "  & 500 & 0.2000 & 0.3371 & 10.4113 & -  \\\\\n",
+      "  & 600 & 0.2000 & 0.3389 & 9.8743 & -  \\\\\n",
+      "  & 700 & 0.2000 & 0.3408 & 9.4838 & -  \\\\\n",
+      "  & 800 & 0.2000 & 0.3426 & 9.1810 & -  \\\\\n",
+      "  & 900 & 0.2000 & 0.3433 & 8.9780 & -  \\\\\n",
+      "  & 1000 & 0.2000 & 0.3435 & 8.9407 & -  \\\\\n",
+      "\\hline\n",
+      "PD+P & 100 & 0.9741 & 0.3603 & 14.5408 & -  \\\\\n",
+      "  & 200 & 0.4743 & 0.5000 & 13.8273 & -  \\\\\n",
+      "  & 300 & 1.0000 & 0.5000 & 11.6869 & -  \\\\\n",
+      "  & 400 & 1.0000 & 0.5000 & 10.6134 & -  \\\\\n",
+      "  & 500 & 1.0000 & 0.5000 & 9.8871 & -  \\\\\n",
+      "  & 600 & 1.0000 & 0.5000 & 9.4701 & -  \\\\\n",
+      "  & 700 & 1.0000 & 0.5000 & 9.1016 & -  \\\\\n",
+      "  & 800 & 1.0000 & 0.5000 & 8.6266 & -  \\\\\n",
+      "  & 900 & 1.0000 & 0.5000 & 8.5162 & -  \\\\\n",
+      "  & 1000 & 1.0000 & 0.5000 & 8.6311 & -  \\\\\n",
+      "\\hline\n"
      ]
     }
    ],
@@ -497,7 +556,7 @@
     "\n",
     "dirSkip = [\".hydra\", \"init\"]\n",
     "\n",
-    "optResultsPath = \"./optimizationResultsReducedRange/\"\n",
+    "optResultsPath = \"./optimizationResults/\"\n",
     "\n",
     "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\"]\n",
     "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@500k\"]\n",
@@ -526,11 +585,18 @@
     "            # print(\"Re \" + str(re) + \" F: \", F)\n",
     "            # print(\"Re \" + str(reNr) + \": Lo = \" + str(X[0]), \" Ho = \" + str(X[1]))\n",
     "            \n",
-    "            row = [model]\n",
+    "            modelStrSplit = model.split(\"@\")\n",
+    "                \n",
+    "            if len(modelStrSplit) == 3:\n",
+    "                label = shortNameDict[modelStrSplit[0]] + \"@\" + modelStrSplit[1].split(\"k\")[0] + \"k_\" + shortNameDict[modelStrSplit[1].split(\"k\")[-1]] #+ \"@\" + modelStrSplit[-1]\n",
+    "            elif len(modelStrSplit) == 2:\n",
+    "                label = shortNameDict[modelStrSplit[0]]\n",
+    "            \n",
+    "            row = [label]\n",
     "            row += [reNr, X[0], X[1], F[0]]\n",
     "            \n",
     "            if reNr == 100:\n",
-    "                latexStr = model + \" & \" + str(reNr)\n",
+    "                latexStr = label + \" & \" + str(reNr)\n",
     "            else:\n",
     "                latexStr = \" \" + \" & \" + str(reNr)\n",
     "            \n",
@@ -750,17 +816,6 @@
     "\n",
     "\n",
     "# resultsFilePath=\"./resultsOpt.csv\"\n",
-    "\n",
-    "shortNameDict = {\n",
-    "    \"data1800PlusPhysicsLambda1\": \"D+P\",\n",
-    "    # \"data1800PlusPhysicsLambda1\": \"D+P_L1\",\n",
-    "    \"data1800PlusPhysicsLambda01\": \"D+P\",\n",
-    "    # \"data1800PlusPhysicsLambda01\": \"D+P_L0.1\",\n",
-    "    \"dataOnly1800\": \"D\",\n",
-    "    \"physicsOnly\": \"P\",\n",
-    "    \"pressureDataPlusPhysicsLambda1\": \"PD+P\",\n",
-    "    \"2pO\": \"toP\"\n",
-    "}\n",
     "\n",
     "dirSkip = [\"dataOnly1800@500k\", \"pressureDataPlusPhysicsLambda1@500k\", \"\"]\n",
     "\n",
