--- a/post.ipynb
+++ b/post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "    \"dataOnly1800\": \"D\",\n",
     "    \"physicsOnly\": \"P\",\n",
     "    \"pressureDataPlusPhysicsLambda1\": \"PD+P\",\n",
-    "    \"2pO\": \"toP\"\n",
+    "    \"2pO\": \"ToP\"\n",
     "}"
    ]
   },
@@ -206,148 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "physicsOnly@500k\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "physicsOnly@500k\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "physicsOnly@500k\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "physicsOnly@500k\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "physicsOnly@500k\n",
-      "ns DP 154\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 154\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 154\n",
-      "physicsOnly@500k\n",
-      "ns DP 155\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 155\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 155\n",
-      "physicsOnly@500k\n",
-      "ns DP 156\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 156\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 156\n",
-      "physicsOnly@500k\n",
-      "ns DP 157\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 157\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 157\n",
-      "physicsOnly@500k\n",
-      "ns DP 158\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 158\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 158\n",
-      "physicsOnly@500k\n",
-      "ns DP 159\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 159\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 159\n",
-      "physicsOnly@500k\n",
-      "ns DP 160\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 160\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 160\n",
-      "physicsOnly@500k\n",
-      "ns DP 161\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 161\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 161\n",
-      "physicsOnly@500k\n",
-      "ns DP 162\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 162\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 162\n",
-      "physicsOnly@500k\n",
-      "ns DP 163\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 163\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 163\n",
-      "physicsOnly@500k\n",
-      "ns DP 164\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 164\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 164\n",
-      "physicsOnly@500k\n",
-      "ns DP 165\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 165\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 165\n",
-      "physicsOnly@500k\n",
-      "ns DP 166\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 166\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 166\n",
-      "physicsOnly@500k\n",
-      "ns DP 167\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 167\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 167\n",
-      "physicsOnly@500k\n",
-      "ns DP 168\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 168\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 168\n",
-      "physicsOnly@500k\n",
-      "ns DP 169\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 169\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 169\n",
-      "physicsOnly@500k\n",
-      "ns DP 170\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 170\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 170\n",
-      "physicsOnly@500k\n",
-      "ns DP 171\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 171\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 171\n",
-      "physicsOnly@500k\n",
-      "ns DP 172\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 172\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 172\n",
-      "physicsOnly@500k\n",
-      "ns DP 173\n",
-      "data1800PlusPhysicsLambda01@500k\n",
-      "ns DP 173\n",
-      "data1800PlusPhysicsLambda1@500k\n",
-      "ns DP 173\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read and Compare Delta Cp OLD\n",
     "\n",
@@ -436,17 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D+P@100k_toP@500k & 100 & 0.2239 & 0.1210 & 20.1959 & -  \\\\\n",
-      "  & 200 & 0.2772 & 0.2832 & 14.6958 & -  \\\\\n",
-      "  & 300 & 0.2200 & 0.3515 & 12.4621 & -  \\\\\n",
-      "  & 400 & 0.2180 & 0.3534 & 11.1902 & -  \\\\\n",
+      "D+P$\\_W_d0.1$@100kToP & 400 & 0.2180 & 0.3534 & 11.1902 & -  \\\\\n",
       "  & 500 & 0.2187 & 0.3609 & 10.4098 & -  \\\\\n",
       "  & 600 & 0.2174 & 0.3596 & 9.8865 & -  \\\\\n",
       "  & 700 & 0.2146 & 0.3628 & 9.4816 & -  \\\\\n",
@@ -454,10 +312,7 @@
       "  & 900 & 0.2136 & 0.3951 & 8.9682 & -  \\\\\n",
       "  & 1000 & 0.2117 & 0.4021 & 8.9151 & -  \\\\\n",
       "\\hline\n",
-      "D+P@300k_toP@500k & 100 & 0.3092 & 0.3010 & 19.9493 & -  \\\\\n",
-      "  & 200 & 0.3930 & 0.2622 & 14.5867 & -  \\\\\n",
-      "  & 300 & 0.2180 & 0.3891 & 12.3648 & -  \\\\\n",
-      "  & 400 & 0.2170 & 0.3918 & 11.1349 & -  \\\\\n",
+      "D+P$\\_W_d0.1$@300kToP & 400 & 0.2170 & 0.3918 & 11.1349 & -  \\\\\n",
       "  & 500 & 0.2191 & 0.3895 & 10.3551 & -  \\\\\n",
       "  & 600 & 0.2155 & 0.3934 & 9.8225 & -  \\\\\n",
       "  & 700 & 0.2172 & 0.3891 & 9.4348 & -  \\\\\n",
@@ -465,10 +320,7 @@
       "  & 900 & 0.2195 & 0.3844 & 8.9382 & -  \\\\\n",
       "  & 1000 & 0.5771 & 0.3308 & 8.8544 & -  \\\\\n",
       "\\hline\n",
-      "D+P & 100 & 0.5535 & 0.1292 & 19.8896 & -  \\\\\n",
-      "  & 200 & 0.3898 & 0.2544 & 14.4714 & -  \\\\\n",
-      "  & 300 & 0.2824 & 0.3925 & 12.3547 & -  \\\\\n",
-      "  & 400 & 0.6427 & 0.3202 & 11.1529 & -  \\\\\n",
+      "D+P$\\_W_d0.1$ & 400 & 0.6427 & 0.3202 & 11.1529 & -  \\\\\n",
       "  & 500 & 0.7783 & 0.3204 & 10.4429 & -  \\\\\n",
       "  & 600 & 0.2145 & 0.3998 & 9.8673 & -  \\\\\n",
       "  & 700 & 0.2162 & 0.3937 & 9.5285 & -  \\\\\n",
@@ -476,10 +328,7 @@
       "  & 900 & 0.9092 & 0.3023 & 8.9590 & -  \\\\\n",
       "  & 1000 & 0.8323 & 0.3244 & 8.8755 & -  \\\\\n",
       "\\hline\n",
-      "D+P@100k_toP@500k & 100 & 0.2372 & 0.1271 & 19.9760 & -  \\\\\n",
-      "  & 200 & 0.2223 & 0.3356 & 14.7223 & -  \\\\\n",
-      "  & 300 & 0.2191 & 0.3460 & 12.4415 & -  \\\\\n",
-      "  & 400 & 0.2170 & 0.3451 & 11.1630 & -  \\\\\n",
+      "D+P$\\_W_d1$@100kToP & 400 & 0.2170 & 0.3451 & 11.1630 & -  \\\\\n",
       "  & 500 & 0.2173 & 0.3547 & 10.3830 & -  \\\\\n",
       "  & 600 & 0.2161 & 0.3562 & 9.8424 & -  \\\\\n",
       "  & 700 & 0.2167 & 0.3566 & 9.4899 & -  \\\\\n",
@@ -487,10 +336,7 @@
       "  & 900 & 0.2175 & 0.3980 & 8.9899 & -  \\\\\n",
       "  & 1000 & 0.2165 & 0.3980 & 8.9837 & -  \\\\\n",
       "\\hline\n",
-      "D+P@300k_toP@500k & 100 & 0.2959 & 0.1316 & 19.2595 & -  \\\\\n",
-      "  & 200 & 0.3778 & 0.4963 & 14.2925 & -  \\\\\n",
-      "  & 300 & 0.2213 & 0.4454 & 12.1583 & -  \\\\\n",
-      "  & 400 & 0.2200 & 0.4302 & 10.9849 & -  \\\\\n",
+      "D+P$\\_W_d1$@300kToP & 400 & 0.2200 & 0.4302 & 10.9849 & -  \\\\\n",
       "  & 500 & 0.2179 & 0.4121 & 10.2719 & -  \\\\\n",
       "  & 600 & 0.2171 & 0.4060 & 9.7592 & -  \\\\\n",
       "  & 700 & 0.2184 & 0.4067 & 9.4968 & -  \\\\\n",
@@ -498,10 +344,7 @@
       "  & 900 & 0.2177 & 0.4011 & 9.0157 & -  \\\\\n",
       "  & 1000 & 0.2184 & 0.4017 & 9.0354 & -  \\\\\n",
       "\\hline\n",
-      "D+P & 100 & 0.3742 & 0.1311 & 19.8626 & -  \\\\\n",
-      "  & 200 & 0.3780 & 0.4980 & 13.9113 & -  \\\\\n",
-      "  & 300 & 0.4630 & 0.4433 & 11.8453 & -  \\\\\n",
-      "  & 400 & 1.0000 & 0.2465 & 10.8859 & -  \\\\\n",
+      "D+P$\\_W_d1$ & 400 & 1.0000 & 0.2465 & 10.8859 & -  \\\\\n",
       "  & 500 & 0.4603 & 0.3820 & 10.2538 & -  \\\\\n",
       "  & 600 & 0.6451 & 0.3875 & 9.7169 & -  \\\\\n",
       "  & 700 & 0.5939 & 0.3908 & 9.5742 & -  \\\\\n",
@@ -509,10 +352,7 @@
       "  & 900 & 0.6533 & 0.3871 & 8.8977 & -  \\\\\n",
       "  & 1000 & 0.6406 & 0.3152 & 8.9009 & -  \\\\\n",
       "\\hline\n",
-      "D & 100 & 0.9718 & 0.3478 & 21.2171 & -  \\\\\n",
-      "  & 200 & 0.3678 & 0.1306 & 13.0838 & -  \\\\\n",
-      "  & 300 & 0.6016 & 0.4332 & 10.5215 & -  \\\\\n",
-      "  & 400 & 0.5997 & 0.4325 & 10.1811 & -  \\\\\n",
+      "D & 400 & 0.5997 & 0.4325 & 10.1811 & -  \\\\\n",
       "  & 500 & 0.5930 & 0.4322 & 9.7543 & -  \\\\\n",
       "  & 600 & 0.8464 & 0.3068 & 9.3766 & -  \\\\\n",
       "  & 700 & 0.8466 & 0.3046 & 9.3548 & -  \\\\\n",
@@ -520,10 +360,7 @@
       "  & 900 & 0.5941 & 0.3102 & 8.7262 & -  \\\\\n",
       "  & 1000 & 0.8479 & 0.3090 & 8.7245 & -  \\\\\n",
       "\\hline\n",
-      "P & 100 & 0.2116 & 0.1000 & 20.1844 & -  \\\\\n",
-      "  & 200 & 0.2000 & 0.1000 & 14.6800 & -  \\\\\n",
-      "  & 300 & 0.2000 & 0.1000 & 12.4607 & -  \\\\\n",
-      "  & 400 & 0.2000 & 0.3361 & 11.2295 & -  \\\\\n",
+      "P & 400 & 0.2000 & 0.3361 & 11.2295 & -  \\\\\n",
       "  & 500 & 0.2000 & 0.3371 & 10.4113 & -  \\\\\n",
       "  & 600 & 0.2000 & 0.3389 & 9.8743 & -  \\\\\n",
       "  & 700 & 0.2000 & 0.3408 & 9.4838 & -  \\\\\n",
@@ -531,10 +368,7 @@
       "  & 900 & 0.2000 & 0.3433 & 8.9780 & -  \\\\\n",
       "  & 1000 & 0.2000 & 0.3435 & 8.9407 & -  \\\\\n",
       "\\hline\n",
-      "PD+P & 100 & 0.9741 & 0.3603 & 14.5408 & -  \\\\\n",
-      "  & 200 & 0.4743 & 0.5000 & 13.8273 & -  \\\\\n",
-      "  & 300 & 1.0000 & 0.5000 & 11.6869 & -  \\\\\n",
-      "  & 400 & 1.0000 & 0.5000 & 10.6134 & -  \\\\\n",
+      "PD+P & 400 & 1.0000 & 0.5000 & 10.6134 & -  \\\\\n",
       "  & 500 & 1.0000 & 0.5000 & 9.8871 & -  \\\\\n",
       "  & 600 & 1.0000 & 0.5000 & 9.4701 & -  \\\\\n",
       "  & 700 & 1.0000 & 0.5000 & 9.1016 & -  \\\\\n",
@@ -556,7 +390,18 @@
     "\n",
     "dirSkip = [\".hydra\", \"init\"]\n",
     "\n",
-    "optResultsPath = \"./optimizationResults/\"\n",
+    "shortNameDict = {\n",
+    "    \"data1800PlusPhysicsLambda1\": \"D+P$\\_W_d1$\",\n",
+    "    # \"data1800PlusPhysicsLambda1\": \"D+P_L1\",\n",
+    "    \"data1800PlusPhysicsLambda01\": \"D+P$\\_W_d0.1$\",\n",
+    "    # \"data1800PlusPhysicsLambda01\": \"D+P_L0.1\",\n",
+    "    \"dataOnly1800\": \"D\",\n",
+    "    \"physicsOnly\": \"P\",\n",
+    "    \"pressureDataPlusPhysicsLambda1\": \"PD+P\",\n",
+    "    \"2pO\": \"ToP\"\n",
+    "}\n",
+    "\n",
+    "optResultsPath = \"./optimizationResultsReducedRange/\"\n",
     "\n",
     "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@300k\"]\n",
     "# models = [\"physicsOnly@500k\", \"data1800PlusPhysicsLambda01@500k\"]\n",
@@ -576,7 +421,12 @@
     "            continue\n",
     "            \n",
     "        optPath = optResultsPath + model\n",
-    "        for reNr in range (100, 1100, 100):\n",
+    "        \n",
+    "        reStart = 400\n",
+    "        reEnd = 1000\n",
+    "        \n",
+    "        \n",
+    "        for reNr in range (reStart, reEnd+1, 100):\n",
     "\n",
     "            F = np.load(optPath + \"/optResultsF\" + str(reNr) + \".npy\")\n",
     "            X = np.load(optPath + \"/optResultsX\" + str(reNr) + \".npy\")\n",
@@ -588,14 +438,14 @@
     "            modelStrSplit = model.split(\"@\")\n",
     "                \n",
     "            if len(modelStrSplit) == 3:\n",
-    "                label = shortNameDict[modelStrSplit[0]] + \"@\" + modelStrSplit[1].split(\"k\")[0] + \"k_\" + shortNameDict[modelStrSplit[1].split(\"k\")[-1]] #+ \"@\" + modelStrSplit[-1]\n",
+    "                label = shortNameDict[modelStrSplit[0]] + \"@\" + modelStrSplit[1].split(\"k\")[0] + \"k\" + shortNameDict[modelStrSplit[1].split(\"k\")[-1]] #+ \"@\" + modelStrSplit[-1]\n",
     "            elif len(modelStrSplit) == 2:\n",
     "                label = shortNameDict[modelStrSplit[0]]\n",
     "            \n",
     "            row = [label]\n",
     "            row += [reNr, X[0], X[1], F[0]]\n",
     "            \n",
-    "            if reNr == 100:\n",
+    "            if reNr == reStart:\n",
     "                latexStr = label + \" & \" + str(reNr)\n",
     "            else:\n",
     "                latexStr = \" \" + \" & \" + str(reNr)\n",
