--- a/post.ipynb
+++ b/post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,27 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D+P & 0.1 & 100 & F & 0.971 & 0.868 & 8.912 & 7.411 & 2.192 & 1.740 \\\\\n",
-      "D+P & 0.1 & 300 & F & 0.950 & 0.703 & 6.634 & 4.811 & 1.670 & 1.257 \\\\\n",
-      "D+P & 0.1 & 500 & F & 0.850 & 0.499 & 3.163 & 1.547 & 1.317 & 0.857 \\\\\n",
-      "D+P & 0.1 & 500 & FC & 0.249 & 0.243 & 0.346 & 0.421 & 0.168 & 0.180 \\\\\n",
-      "D+P & 1 & 100 & F & 0.884 & 0.847 & 11.430 & 9.588 & 3.043 & 2.236 \\\\\n",
-      "D+P & 1 & 300 & F & 1.566 & 1.020 & 10.972 & 6.992 & 3.463 & 2.207 \\\\\n",
-      "D+P & 1 & 500 & F & 1.381 & 1.239 & 2.115 & 1.965 & 1.332 & 1.159 \\\\\n",
-      "D+P & 1 & 500 & FC & 0.273 & 0.359 & 0.377 & 0.520 & 0.174 & 0.227 \\\\\n",
-      "D & - & 500 & F & 5.238 & 5.133 & 10.737 & 7.824 & 5.834 & 5.504 \\\\\n",
-      "D & - & 500 & FC & 0.946 & 2.080 & 0.477 & 0.588 & 0.525 & 1.173 \\\\\n",
-      "P & - & - & F & 1.257 & 1.341 & 8.972 & 8.155 & 2.361 & 1.743 \\\\\n",
-      "P & - & - & FC & 9.522 & 2.474 & 19.391 & 8.970 & 1.737 & 1.686 \\\\\n",
-      "PD+P & 1 & - & F & 3.392 & 3.448 & 3.357 & 2.061 & 1.988 & 2.263 \\\\\n",
-      "PD+P & 1 & - & FC & 0.738 & 0.445 & 0.857 & 0.547 & 0.634 & 0.254 \\\\\n"
+      "Physics & - & - & Fully Connected & 7.957 & 2.008 & 18.308 & 8.219 & 1.389 & 1.485 \\\\\n",
+      "Data & - & 500 & Fully Connected & 0.946 & 2.080 & 0.477 & 0.588 & 0.525 & 1.173 \\\\\n",
+      "Data+Physics & 0.1 & 500 & Fully Connected & 0.194 & 0.155 & 0.338 & 0.397 & 0.145 & 0.124 \\\\\n",
+      "Data+Physics & 1 & 500 & Fully Connected & 0.392 & 0.712 & 0.438 & 0.562 & 0.257 & 0.413 \\\\\n",
+      "Pressure Data+Physics & 0.1 & - & Fully Connected & 0.493 & 0.256 & 1.224 & 0.956 & 0.132 & 0.107 \\\\\n",
+      "Pressure Data+Physics & 1 & - & Fully Connected & 0.548 & 0.344 & 0.851 & 0.586 & 0.458 & 0.207 \\\\\n",
+      "Physics & - & - & Fourier & 1.370 & 1.400 & 8.433 & 7.449 & 2.158 & 1.481 \\\\\n",
+      "Data & - & 500 & Fourier & 5.238 & 5.133 & 10.737 & 7.824 & 5.834 & 5.504 \\\\\n",
+      "Data+Physics & 0.1 & 500 & Fourier & 0.895 & 0.673 & 1.688 & 1.178 & 0.914 & 0.712 \\\\\n",
+      "Data+Physics & 1 & 500 & Fourier & 1.192 & 1.174 & 2.176 & 1.959 & 1.088 & 0.969 \\\\\n",
+      "Pressure Data+Physics & 0.1 & - & Fourier & 1.800 & 1.166 & 5.700 & 3.219 & 1.079 & 0.790 \\\\\n",
+      "Pressure Data+Physics & 1 & - & Fourier & 2.711 & 2.800 & 2.738 & 1.487 & 1.710 & 1.757 \\\\\n",
+      "Data+Physics & 0.1 & 100 & Fourier & 1.284 & 1.233 & 7.706 & 7.007 & 1.905 & 1.396 \\\\\n",
+      "Data+Physics & 1 & 100 & Fourier & 1.177 & 1.097 & 10.282 & 8.665 & 2.638 & 1.927 \\\\\n"
      ]
     }
    ],
@@ -75,10 +75,13 @@
     "\n",
     "dirSkip = [\".hydra\", \"init\"]\n",
     "\n",
-    "models = listdir(outputsPath)\n",
-    "models.sort()\n",
+    "# models = listdir(outputsPath)\n",
+    "# models.sort()\n",
     "\n",
-    "# models = [\"data1800PlusPhysicsLambda1@500k\", \"data1800PlusPhysicsLambda1FC@300k\"]\n",
+    "models = [\"physicsOnlyFC@500k\", \"dataOnly1800FC@500k\", \"data1800PlusPhysicsLambda01FC@500k\", \"data1800PlusPhysicsLambda1FC@500k\", \"pressureDataPlusPhysicsLambda01FC@500k\", \"pressureDataPlusPhysicsLambda1FC@500k\"]\n",
+    "\n",
+    "models += [\"physicsOnly@500k\", \"dataOnly1800@500k\", \"data1800PlusPhysicsLambda01@500k\", \"data1800PlusPhysicsLambda1@500k\", \"pressureDataPlusPhysicsLambda01@500k\", \"pressureDataPlusPhysicsLambda1@500k\",\n",
+    "\"data1800PlusPhysicsLambda01@100k2pO@500k\", \"data1800PlusPhysicsLambda1@100k2pO@500k\"]\n",
     "\n",
     "dirSkip = [\".hydra\", \"init\", \"initFC\", \"vtp\", ]\n",
     "skip = [\"@100k\", \"@300k\"]\n",
